--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,6 +49,16 @@
             android:autofillHints="password" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <TextView
+        android:id="@+id/btn_register"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Register"
+        android:layout_margin="10dp"
+        android:textSize="15sp"
+        android:layout_below="@id/til_password_layout"
+        android:layout_alignParentEnd="true"/>
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_submit"
         android:layout_width="match_parent"
@@ -56,6 +66,6 @@
         android:text="@string/login"
         android:background="@drawable/shape_btn_login_register"
         android:textColor="@color/white"
-        android:layout_below="@id/til_password_layout" />
+        android:layout_below="@id/btn_register" />
 
 </RelativeLayout>
