--- a/app/src/main/res/layout/activity_banner_promo_item_list.xml
+++ b/app/src/main/res/layout/activity_banner_promo_item_list.xml
@@ -1,67 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".presentation.homepage.components.activity.banner.BannerPromoItemListActivity">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/iv_top_toolbar"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/abl_toolbar_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/top_drawable_lists"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:background="android.R.color.transparent"
+        app:elevation="0dp">
 
-    <ImageButton
-        android:id="@+id/btn_banner_back"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/arrow_back"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/rv_item_list"
-        app:layout_constraintStart_toStartOf="parent"
-        android:background="?android:selectableItemBackground"
-        android:layout_marginTop="@dimen/mrgn_1"
-        android:layout_marginHorizontal="@dimen/mrgn_2"
-        android:layout_marginBottom="@dimen/mrgn_2"/>
-
-    <TextView
-        android:id="@+id/tv_promo_name_title"
-        android:text="Promo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:layout_marginStart="@dimen/mrgn_2"
-        android:textColor="@color/white"
-        app:layout_constraintTop_toTopOf="@id/btn_banner_back"
-        app:layout_constraintBottom_toBottomOf="@id/btn_banner_back"
-        app:layout_constraintStart_toEndOf="@id/btn_banner_back"/>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/iv_top_toolbar"
-        app:layout_constraintEnd_toStartOf="parent"
+    <include
+        android:id="@+id/banner_item_list_toolbar"
+        layout="@layout/promo_banner_toolbar"
+        app:layout_scrollFlags="scroll|enterAlways"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        >
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tl_gratis_product"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <com.amar.library.ui.StickyScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/very_light_gray"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:stickyHeader="@+id/cl_sticky_banner_product_list">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabMode="fixed" />
+            android:layout_height="match_parent"
+            tools:context=".presentation.homepage.components.activity.banner.BannerPromoItemListActivity">
 
-        <FrameLayout
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </ScrollView>
+            <ImageView
+                android:id="@+id/iv_banner_image"
+                android:layout_width="match_parent"
+                android:layout_height="210dp"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/banner_placeholder" />
+
+            <ImageView
+                android:id="@+id/iv_logo_syarat"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/info_logo"
+                android:paddingVertical="@dimen/mrgn_2"
+                android:layout_marginStart="@dimen/mrgn_3"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/iv_banner_image" />
+
+            <TextView
+                android:id="@+id/tv_syarat_dkt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/syarat_dan_ketentuan"
+                android:textColor="@color/teal"
+                android:textSize="18sp"
+                android:layout_marginStart="20dp"
+                app:layout_constraintBottom_toBottomOf="@id/iv_logo_syarat"
+                app:layout_constraintStart_toEndOf="@id/iv_logo_syarat"
+                app:layout_constraintTop_toTopOf="@id/iv_logo_syarat"/>
+
+            <ImageView
+                android:id="@+id/iv_arrow_blue"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/arrow_next_blue"
+                android:layout_marginEnd="@dimen/mrgn_3"
+                app:layout_constraintBottom_toBottomOf="@id/iv_logo_syarat"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@id/iv_logo_syarat"
+                />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_sticky_banner_product_list"
+                android:layout_width="match_parent"
+                android:layout_height="700dp"
+                app:layout_constraintTop_toBottomOf="@id/iv_logo_syarat">
+
+                <com.google.android.material.divider.MaterialDivider
+                    android:id="@+id/divider_banner_product_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:dividerColor="@color/gray"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.tabs.TabLayout
+                    android:id="@+id/tl_official_store"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toBottomOf="@+id/divider_banner_product_list"
+                    app:tabMode="fixed" />
+
+                <FrameLayout
+                    android:id="@+id/container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/tl_official_store" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.amar.library.ui.StickyScrollView>
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
