--- a/app/src/main/res/layout/promo_banner_toolbar.xml
+++ b/app/src/main/res/layout/promo_banner_toolbar.xml
@@ -2,13 +2,13 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="90dp"
+    android:layout_height="80dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/top_drawable_lists"
     android:elevation="0dp"
     android:paddingBottom="10dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    >
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
     <ImageButton
         android:id="@+id/btn_banner_back"
@@ -21,10 +21,12 @@
 
     <TextView
         android:id="@+id/tv_promo_toolbar_title"
-        android:text="@string/banner_list_title"
+        tools:text="@string/banner_list_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="24sp"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:layout_marginStart="@dimen/mrgn_1"
         android:textColor="@color/white"/>
 
