--- a/app/src/main/res/layout/fragment_input_user_data.xml
+++ b/app/src/main/res/layout/fragment_input_user_data.xml
@@ -66,11 +66,12 @@
 
         <Button
             android:id="@+id/btn_submit_user_data"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/shape_btn_login_register"
-            android:text="@string/submit" />
+            android:text="@string/submit"
+            android:layout_margin="20dp"/>
     </LinearLayout>
 
 </FrameLayout>
