--- a/app/src/main/res/layout/detail_official_store_toolbar.xml
+++ b/app/src/main/res/layout/detail_official_store_toolbar.xml
@@ -27,6 +27,7 @@
         tools:text="Official Store" />
 
     <ImageView
+        android:id="@+id/iv_cart_toolbar"
         android:layout_marginHorizontal="20dp"
         android:layout_gravity="end"
         android:src="@drawable/outline_shopping_basket_24"
@@ -35,6 +36,7 @@
         android:contentDescription="@string/cart_image_view" />
 
     <ImageView
+        android:id="@+id/iv_search_toolbar"
         android:layout_gravity="end"
         android:src="@drawable/baseline_search_24"
         android:layout_width="30dp"
