--- a/app/src/main/res/layout/activity_all_banner_list.xml
+++ b/app/src/main/res/layout/activity_all_banner_list.xml
@@ -11,7 +11,7 @@
         android:id="@+id/apl_banner_list_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="android.R.color.transparent"
+        android:background="@android:color/transparent"
         app:elevation="0dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
