--- a/app/src/main/res/layout/activity_official_store_search.xml
+++ b/app/src/main/res/layout/activity_official_store_search.xml
@@ -11,25 +11,6 @@
         android:id="@+id/official_store_seach_toolbar"
         layout="@layout/promo_banner_toolbar" />
 
-    <!--        <EditText-->
-    <!--            android:id="@+id/et_official_store_search"-->
-    <!--            android:imeOptions="actionSearch"-->
-    <!--            android:inputType="text"-->
-    <!--            android:drawablePadding="15dp"-->
-    <!--            android:textColorHint="@color/darkGrey"-->
-    <!--            android:hint="Cari"-->
-    <!--            android:layout_marginTop="-20dp"-->
-    <!--            android:translationZ="3dp"-->
-    <!--            android:padding="15dp"-->
-    <!--            android:layout_marginHorizontal="20dp"-->
-    <!--            android:backgroundTint="@color/white"-->
-    <!--            android:background="@drawable/shape_btn_keranjang"-->
-    <!--            android:drawableStart="@drawable/baseline_search_24"-->
-    <!--            android:drawableTint="@color/black"-->
-    <!--            app:layout_constraintTop_toBottomOf="@id/official_store_seach_toolbar"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="wrap_content"/>-->
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -73,8 +54,12 @@
         android:id="@+id/rv_official_store_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:paddingTop="30dp"
+        android:paddingBottom="80dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/official_store_seach_toolbar"
         tools:listitem="@layout/item_brand" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
