--- a/app/src/main/res/layout/fragment_beranda.xml
+++ b/app/src/main/res/layout/fragment_beranda.xml
@@ -25,6 +25,14 @@
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"/>
 
+  <FrameLayout
+      android:id="@+id/fl_official_store"
+      app:layout_constraintTop_toBottomOf="@id/fl_product_categories"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"/>
+
+
+
 
 
  </androidx.constraintlayout.widget.ConstraintLayout>
