--- a/app/src/main/res/layout/activity_banner_promo_item_list.xml
+++ b/app/src/main/res/layout/activity_banner_promo_item_list.xml
@@ -12,13 +12,13 @@
         android:background="@color/transparant"
         app:elevation="0dp">
 
-    <include
-        android:id="@+id/banner_item_list_toolbar"
-        layout="@layout/promo_banner_toolbar"
-        app:layout_scrollFlags="scroll|enterAlways"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <include
+            android:id="@+id/banner_item_list_toolbar"
+            layout="@layout/promo_banner_toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_scrollFlags="scroll|enterAlways" />
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.amar.library.ui.StickyScrollView
@@ -26,7 +26,7 @@
         android:layout_height="match_parent"
         android:background="@color/very_light_gray"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:stickyHeader="@+id/cl_sticky_banner_product_list">
+        app:stickyHeader="@+id/ll_sticky_banner_product_list">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -47,9 +47,9 @@
                 android:id="@+id/iv_logo_syarat"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/info_logo"
-                android:paddingVertical="@dimen/mrgn_2"
                 android:layout_marginStart="@dimen/mrgn_3"
+                android:paddingVertical="@dimen/mrgn_2"
+                android:src="@drawable/info_logo"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/iv_banner_image" />
 
@@ -57,29 +57,29 @@
                 android:id="@+id/tv_syarat_dkt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:text="@string/syarat_dan_ketentuan"
                 android:textColor="@color/teal"
                 android:textSize="18sp"
-                android:layout_marginStart="20dp"
                 app:layout_constraintBottom_toBottomOf="@id/iv_logo_syarat"
                 app:layout_constraintStart_toEndOf="@id/iv_logo_syarat"
-                app:layout_constraintTop_toTopOf="@id/iv_logo_syarat"/>
+                app:layout_constraintTop_toTopOf="@id/iv_logo_syarat" />
 
             <ImageView
                 android:id="@+id/iv_arrow_blue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/arrow_next_blue"
                 android:layout_marginEnd="@dimen/mrgn_3"
+                android:src="@drawable/arrow_next_blue"
                 app:layout_constraintBottom_toBottomOf="@id/iv_logo_syarat"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/iv_logo_syarat"
-                />
+                app:layout_constraintTop_toTopOf="@id/iv_logo_syarat" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cl_sticky_banner_product_list"
+            <LinearLayout
+                android:id="@+id/ll_sticky_banner_product_list"
                 android:layout_width="match_parent"
                 android:layout_height="700dp"
+                android:orientation="vertical"
                 app:layout_constraintTop_toBottomOf="@id/iv_logo_syarat">
 
                 <com.google.android.material.divider.MaterialDivider
@@ -90,7 +90,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <com.google.android.material.tabs.TabLayout
-                    android:id="@+id/tl_official_store"
+                    android:id="@+id/tl_banner_product"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
@@ -100,17 +100,14 @@
                 <FrameLayout
                     android:id="@+id/container"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingBottom="70dp"
                     app:layout_constraintTop_toBottomOf="@id/tl_official_store" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.amar.library.ui.StickyScrollView>
-
-
-
-
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
