--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="gold">#FFD700</color>
     <color name="light_gray">#E8E8E8</color>
     <color name="transparant">#00FFFFFF</color>
+    <color name="appBackground">#F9F9F9</color>
 
 
 </resources>
