--- a/app/src/main/res/layout/fragment_input_user_data.xml
+++ b/app/src/main/res/layout/fragment_input_user_data.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,93 +14,89 @@
             style="@style/Edit_Text_Default_Style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
             android:autofillHints="first name"
             android:hint="@string/first_name"
             android:inputType="textPersonName" />
+
         <TextView
             android:id="@+id/tv_fn_err"
+            style="@style/Text_View_Error_Message_Style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Text_View_Error_Message_Style"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp" />
 
         <EditText
             android:id="@+id/et_last_name"
             style="@style/Edit_Text_Default_Style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
             android:autofillHints="last name"
             android:hint="@string/last_name"
             android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/tv_ln_err"
+            style="@style/Text_View_Error_Message_Style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Text_View_Error_Message_Style"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp" />
 
         <EditText
             android:id="@+id/et_email"
             style="@style/Edit_Text_Default_Style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
             android:autofillHints="blabla@example.com"
             android:hint="@string/e_mail_address"
             android:inputType="textEmailAddress" />
 
         <TextView
             android:id="@+id/tv_email_err"
+            style="@style/Text_View_Error_Message_Style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Text_View_Error_Message_Style"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp" />
 
         <EditText
             android:id="@+id/et_password"
             style="@style/Edit_Text_Default_Style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
             android:autofillHints="0123456789"
             android:hint="@string/password"
             android:inputType="textPassword" />
 
         <TextView
             android:id="@+id/tv_pass_err"
+            style="@style/Text_View_Error_Message_Style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Text_View_Error_Message_Style"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp" />
 
         <EditText
             android:id="@+id/et_password_confirm"
             style="@style/Edit_Text_Default_Style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
             android:autofillHints="0123456789"
-            android:hint="@string/password"
+            android:hint="@string/confirm_password"
             android:inputType="textPassword" />
 
         <TextView
             android:id="@+id/tv_pass_confirm_err"
+            style="@style/Text_View_Error_Message_Style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Text_View_Error_Message_Style"
-            android:layout_marginStart="20dp"/>
+            android:layout_marginStart="20dp" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_submit_user_data"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_gravity="center"
             android:layout_margin="20dp"
-            android:textColor="@color/white"
             android:background="@drawable/shape_btn_login_register"
-            android:text="@string/submit" />
+            android:text="@string/submit"
+            android:textColor="@color/white" />
     </LinearLayout>
 </FrameLayout>
