--- a/app/src/main/res/layout/activity_product_categories.xml
+++ b/app/src/main/res/layout/activity_product_categories.xml
@@ -3,38 +3,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/toolbar_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/transparant"
-        app:elevation="0dp">
-
-        <include
-            android:id="@+id/product_category_list_toolbar"
-            layout="@layout/promo_banner_toolbar"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_scrollFlags="scroll|enterAlways" />
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <com.amar.library.ui.StickyScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/very_light_gray"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:stickyHeader="@+id/sticky_category">
+        android:orientation="vertical">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/toolbar_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/transparant"
+            app:elevation="0dp">
+
+            <include
+                android:id="@+id/product_category_list_toolbar"
+                layout="@layout/promo_banner_toolbar"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_scrollFlags="scroll|enterAlways" />
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/very_light_gray"
+            android:layout_gravity="bottom"
+            app:layout_anchorGravity="bottom"
+            app:layout_anchor="@id/toolbar_list">
 
             <LinearLayout
                 android:id="@+id/sticky_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                app:layout_anchorGravity="bottom"
                 android:orientation="vertical"
-                app:layout_anchor="@id/toolbar_list">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <com.google.android.material.tabs.TabLayout
                     android:id="@+id/tab_layout"
@@ -47,5 +50,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
             </LinearLayout>
-    </com.amar.library.ui.StickyScrollView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
